= ActiveMerchant CHANGELOG

* Worldpay: XML encoding is required to be ISO-8859-1 [dougal]
* Worldpay: Add card code for more supported card types [dougal]

== Version 1.30.0 (February 13, 2013)

* Add FirstData Global Gateway e4 [frobcode]
* PaymentExpress: Add support for optional fields: ClientType and TxnData [moklett]
* PaymentExpress: Limit MerchantReference/description to 64 chars [moklett]
* Wirecard: description must be no more than 32 characters [moklett]
* Litle: Add support for passing a token to the authorize and purchase methods [forest]
* PayPal Common: Allow searching for transactions by ProfileID [aq1018]
* Add Spreedly Core gateway [duff]
* eWay Gateway: Return proper value for authorization [duff]
* eWay Gateway: Add support for refunds [duff]
* Quickpay: Add support for protocols 5 & 6 [twarberg]
* Banwire gateway: Handle JSON::ParserError [duff]
* Balanced gateway: Fix unspecified marketplace [duff]
* QBMS gateway: Allow partial addresses [duff]
* Authorize.Net CIM: Allow omitting card expiration date [shanebonham]
* Authorize.Net CIM: Add support for extraOptions to createCustomerProfileTransaction [tpiekos]
* Add NETPAY gateway [samlown]
* Balanced gateway: Add amount to the refund method signature [ntalbott]
* Orbital gateway: Fix void method signature [aprofeit, ntalbott]
* Eway Managed: Add 'query_customer' API as #retrieve [cdaloisio]
* NetPay: Fix the signature for void [duff]
* Cybersource: Add check support [bowmande]
* Moneris: Use a capture of $0 for void [ntalbott]
* PayPal Express integration: Fix received_at time zone [ntalbott]
* NAB Transact: Add refund capability [nagash]
* Stripe: Add support for application_fee [duff]
* SagePay: Add support for GiftAidPayment [duff]
* Wirecard: Add support for partial captures [richardblair]
* Add Pin gateway [madpilot]
* Balanced: Added support for on_behalf_of_uri to capture [cwise]
* Litle: Add support for passing an order_source [forest]